--- a/public/src/scss/settingsview.scss
+++ b/public/src/scss/settingsview.scss
@@ -1,5 +1,5 @@
 .settingsview {
-	.mainview__content__primary {
+	.mainview__inner-frame {
 		padding: 20px;
 	}
 
